# tau

./: .gitignore  DESIGN.md  NOTE.md  README.md  REVIEW_CHECKLIST.md  RUN.md  debug.py  pyproject.toml  test_scroll.py  test_scroll_x.py  verify_shell.py
.github/workflows/: core-architecture.yml
.tau/audit/: assistant-actions.jsonl
.tau/events/: assistant-events.jsonl
tau/: __init__.py  cli.py  cli_bootstrap.py  cli_ui.py  config.py  context_files.py  editor.py  packages.py  prompts.py  rpc.py  sdk.py
tau/core/: __init__.py  agent.py  assistant_events.py  audit.py  capabilities.py  code_index.py  context.py  credential_pool.py  extension.py  model_metadata.py  policy.py  prompt_builder.py  prompt_caching.py  session.py  (+11 more)
tests/: test_agent.py  test_agent_p1_wiring.py  test_architecture_boundaries.py  test_at_file_cli.py  test_code_index.py  test_code_index_flag.py  test_compaction.py  test_context.py  test_context_files.py  test_credential_pool.py  test_e2e_mocked_provider.py  test_editor.py  test_extensions.py  test_fs_tools.py  test_google_provider.py  test_hooks.py  test_max_cost.py  test_mcp_resources_extension.py  test_model_metadata.py  test_output_modes.py  test_packages.py  test_policy.py  test_prompt_caching.py  test_prompts.py  test_provider_factory.py  test_rate_limit_tracker.py  test_retry.py  test_sdk_rpc.py  test_session.py  test_share.py  test_slash_commands.py  test_smart_routing.py  test_state.py  test_steering.py  test_task_planner_extension.py  test_theme_and_tools_config.py  test_tool_registry.py  test_unsloth_provider.py  test_usage_pricing.py
(+19 files in other folders)
