[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tau"
version = "0.1.0"
description = "A minimal, extensible CLI coding agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "openai>=1.0",
    "google-genai>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "tiktoken>=0.7",
    "prompt_toolkit>=3.0",
]

[project.scripts]
tau = "tau.cli:main"

[project.optional-dependencies]
mlx = [
    "mlx-lm>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
